lots of changes

--- a/admin-ui/src/app/feed-view/feed-view.component.scss
+++ b/admin-ui/src/app/feed-view/feed-view.component.scss
@@ -1,3 +1,9 @@
+@import "~src/tailwind-colors";
 .table {
   width: 100%;
+
+  th, td {
+    border: 1px solid $slate-300;
+    padding: 0.25rem 0.5rem;
+  }
 }
